# user-order-microservices

./: .gitignore  README.md  docker-compose.yml
order_service/: .dockerignore  Dockerfile  pyproject.toml
order_service/app/: database.py  grpc_client.py  grpc_server.py  models.py
order_service/proto/: order.proto  order_pb2.py  order_pb2.pyi  order_pb2_grpc.py
user_service/: .dockerignore  Dockerfile  pyproject.toml
user_service/app/: database.py  grpc_server.py
user_service/proto/: user.proto  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
